Added back EA's maven gatling plugin